@@ -5,6 +5,7 @@ Fixes:
 - xt_pknock: avoid crash when hash TFM could not be allocated
 - xt_pknock: avoid inversion of rule lookup that led to warnings
 - xt_DNETMAP: add missing module alias
+- xt_DNETMAP: support for kernels below 2.6.34
 
 
 v1.33 (2011-02-02)
